    o #494380 by vaish: Problems with ajax and the same view displayed multiple times.
    o #835544 by iamjon: export broke if key contained an apostrophe.
    o #941990 by master-of-magic: Link to node when using relationships could occasionally lose track and create bad links.
    o #965496 by ayalon: Update and Override broke validation of most views admin forms.

  New features
    o #841260: Introduce a field to evaluate math expressions. Relies on CTools 1.7 (not yet released).
    o #727894 by stella: Give stronger classes on exposed widgets for easier theming.
    o #464490 by dereine: Allow links to specify that they are absolute.
    o #317653 by Steven Jones: Allow singular/plural formatting in numeric fields.
    o #397252 by thekevinday: Allow "glossary" type views to do case insensitive searches.
    o #843866 by dagmar: Allow summary views to specify their path rather than assuming the view path all the time.
    o #348975 by dereine: Allow cloning of displays.
    o #930714 by brad.bulger: Add aggregator GUID field.
    o #785236 by e_log: Add aggregator field item id as a field.
    o #835934 by dereine: Provide relationship from files to users.
    o #935388 by infojunkie: Add post_build and post_execute hooks similar to post_render.
    o #751970 by dereine: View list form auto submit on change.

Views 2.11 (Jun 16, 2010)
  Bug fixes:
    o #770006 by macdee: Taxonomy term default plugin mysteriously broken.
    o #767146 by bangpound: Validation not passed down into row style plugin.
    o #513396 by yhager and jcisio: Views trim was not multibyte safe.
    o #550420 by blauerberg: Views RSS did not properly pass readmore flag from node to RSS item.
    o #781296 by dereine: Node: Type "link to its node" option broken.
    o #769010 by andrea.gariboldi: Overuse of query substitutions fails on some databases.
    o #607418: Fix queries broken with "ambiguous nid" due to uncommon relationships.